Tue Apr  3 17:01:33 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * THANKS:

          Added Thomas Stegemann <Thomas dot Stegemann at materna dot de>.

Tue Apr  3 16:18:35 UTC 2012  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/ACE.cpp (ACE::timestamp): Fixed an "off-by-one" error that
          caused corruption of timestamps when using
          ACE_LOG_TIMESTAMP="TIME" env var.  Thanks to Andrea Sormanni
          <andrea dot sormanni at gmail dot com> for reporting this and
          providing a fix.
          
          Added Andrea to the Hall of Fame!

Fri Mar 30 14:33:58 UTC 2012  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv1/Process_Per_Connection_Logging_Server.cpp: Changed
          use of ::sscanf_s() to only those platforms with the setting
          ACE_HAS_TR24731_2005_CRT (VC8 and up).

Fri Mar 30 13:39:25 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * include/makeinclude/platform_win32_msvc.GNU:

          Added iphlpapi to the list of system libraries.

Thu Mar 29 21:50:17 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Postbuild steps need a dependency on the executable or library
          so that parallel make will run them at the right time.

Wed Mar 28 22:03:45 UTC 2012  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv1/Process_Per_Connection_Logging_Server.cpp: Changed
          the +H handle value scan to know this is a hex value on Windows, but
          a decimal value on everything else. Thanks to Andy Gokhale for this.

Wed Mar 28 21:44:20 UTC 2012  Steve Huston  <shuston@riverace.com>

        * tests/Multicast_Test.cpp: Removed the forced set_nic to "lo" for
          Linux. It's not needed with the changes from:
          Wed Mar 21 21:57:40 UTC 2012  Steve Huston  <shuston@riverace.com>

Mon Mar 26 11:27:11 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_mingw32.GNU: